<resources>
    <string name="a"> One</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_all">full screen mode</string>
    <string name="action_fall">suspension ball</string>
    <string name="action_leo">LeoTweaks</string>
    <string name="action_lock">one-click lock screen</string>
    <string name="action_outdoors">outdoor mode</string>
    <string name="action_pop">Screen Assistant</string>
    <string name="action_ram">One-click cleanup</string>
    <string name="action_reboot">restart menu</string>
    <string name="action_reminder">Press and hold the power button and the volume down button for 7 seconds to restart the phone.</string>
    <string name="airplane_tactics">Aircraft mode policy</string>
    <string name="airplane_tactics_summary">Enable flight mode does not automatically turn off WLAN</string>
    <string name="alert_error_action">Version restore</string>
    <string name="alert_error_action_pk">Restored to default version, restarting device takes effect</string>
    <string name="alert_error_action_restart">Reboot the device</string>
    <string name="alert_error_number">detected</string>
    <string name="alert_error_number_summary">Version is too high or too low, making it impossible to use custom features</string>
    <string name="alert_error_title">Version uneven match</string>
    <string name="alpha_res">Transparency </string>
    <string name="animator_duration">animated image expansion time effect</string>
    <string name="back_keys">Back key</string>
    <string name="battery_log">empty battery record</string>
    <string name="battery_log_summary">clear application power consumption record and battery curve data</string>
    <string name="bgv_alpha">Set background wallpaper transparency</string>
    <string name="bgv_alpha_start">background wallpaper transparency</string>
    <string name="bgv_blur">set the background wallpaper ambiguity</string>
    <string name="bgv_blur_start">Background wallpaper Gaussian Blur</string>
    <string name="bgv_color">set the background wallpaper overlay color</string>
    <string name="bgv_color_start">Allow background wallpaper coloring</string>
    <string name="bgv_dashed">background dotted stroke</string>
    <string name="bgv_gradient_color_a">gradient color I</string>
    <string name="bgv_gradient_color_b">gradient color II</string>
    <string name="bgv_gradient_color_c">gradient color III</string>
    <string name="bgv_gradient_color_d">gradient color IV</string>
    <string name="bgv_gradient_color_e">gradient color V</string>
    <string name="bgv_gradient_color_f">gradient color VI</string>
    <string name="bgv_gradient_color_gategory">gradient background color</string>
    <string name="bgv_gradient_color_mode">linear gradient color mode</string>
    <string name="bgv_gradient_color_radius">radiative gradient color radius</string>
    <string name="bgv_gradient_color_start_f">Enable VI color gradient</string>
    <string name="bgv_gradient_color_style">gradient color style</string>
    <string name="bgv_mode">background mode</string>
    <string name="bgv_single_color">set a single background color</string>
    <string name="bgv_single_color_gategory">single background color</string>
    <string name="bgv_wallpaper">background wallpaper</string>
    <string name="blur_res">ambiguity  </string>
    <string name="dashed_color_title">set the background dotted color</string>
    <string name="dashed_gop_title">Set the dotted line interval</string>
    <string name="dashed_radius_title">set the background fillet radius</string>
    <string name="dashed_thickness_title">Set the thickness of the dotted line</string>
    <string name="dashed_title">Enable background dotted strokes</string>
    <string name="dashed_width_title">set the width of the dotted line</string>
    <string name="dmesg_title">dmesg log</string>
    <string name="freeze_goole_service">Google service freeze</string>
    <string name="google_name">Google Services</string>
    <string name="google_name_remove">delete Google services</string>
    <string name="google_name_remove_summary">Delete Google services to exchange more space for system partitions</string>
    <string name="gop_title">interval is  </string>
    <string name="hardware_longpress_back">long press the return key action</string>
    <string name="hardware_longpress_home">long press the home button action</string>
    <string name="hardware_longpress_task">long press the task key action</string>
    <string name="hardware_nav_keys">Three King Kong Customization</string>
    <string name="home_keys">home button</string>
    <string name="instal_kernel">Install the FusionLeo kernel</string>
    <string name="keyguard_Biometrics">Direct bio-unlock after reboot</string>
    <string name="keyguard_statusbar">hide the lock screen status bar</string>
    <string name="keyguard_statusbar_name">lock screen</string>
    <string name="keys_custom">Customize three King Kong actions</string>
    <string name="kmesg_title">kmesg log</string>
    <string name="log_clean">clean up</string>
    <string name="log_clean_summary">delete the last crawl log file</string>
    <string name="log_it_summary">You need to have enough patience for crawling logs</string>
    <string name="log_it_title">crawl log</string>
    <string name="log_log">log item</string>
    <string name="log_summary">If the software FC appears this log must be crawled</string>
    <string name="logcat_title">logcat log</string>
    <string name="off">@string/abc_capital_off</string>
    <string name="on">@string/abc_capital_on</string>
    <string name="padding_title">margin is  </string>
    <string name="qs_shelf_all_size">notification settings and all clear text size</string>
    <string name="qs_shelf_clear">Customize all clear text</string>
    <string name="qs_shelf_clear_font">Clear all fonts</string>
    <string name="qs_shelf_notie">custom notification settings text</string>
    <string name="qs_shelf_notie_font">Notification setting font</string>
    <string name="radius_title">angle is  </string>
    <string name="reboot_ui_info">update settings: click here to update after selecting the icon</string>
    <string name="seekbar_padding_sumarry">Slide left and right to adjust margins</string>
    <string name="sim_dialog">Disable STK popup</string>
    <string name="sim_dialog_summary">Do not pop up the SIM card window when booting</string>
    <string name="sim_restriction">3 card restrictions</string>
    <string name="statusbar_battery">status bar battery switch</string>
    <string name="statusbar_battery_color">The status bar background is dark battery color</string>
    <string name="statusbar_battery_color_enabled">Set the status bar background to dark battery color</string>
    <string name="statusbar_battery_dark_color">The status bar background is light battery color</string>
    <string name="statusbar_battery_dark_color_enabled">Set the status bar background to light battery color</string>
    <string name="statusbar_battery_end_padding">battery right margin</string>
    <string name="statusbar_battery_icon_size">battery icon size</string>
    <string name="statusbar_battery_low">low battery threshold</string>
    <string name="statusbar_battery_low_color">The status bar background is darker battery below 15 colors</string>
    <string name="statusbar_battery_low_dark_color">The status bar background is lighter battery below 15 colors</string>
    <string name="statusbar_battery_start_padding">battery left margin</string>
    <string name="statusbar_bg">Status Bar Background</string>
    <string name="statusbar_bg_enabled">Enable custom status bar background</string>
    <string name="statusbar_carrier_enabled">Status Bar Operator Enabled</string>
    <string name="statusbar_icon_hide">Status bar icon is hidden</string>
    <string name="statusbar_icon_padding">Set the status bar icon margins</string>
    <string name="statusbar_icon_padding_enabled">Allow status bar icon margin settings</string>
    <string name="statusbar_logo_enabled">Status bar LOGO enabled</string>
    <string name="statusbar_signal_enabled">Enable signal icon settings</string>
    <string name="statusbar_signal_orientation">signal icon is displayed on the left side of the status bar</string>
    <string name="statusbar_signal_style">Status Bar Signal Icon Selection</string>
    <string name="statusbar_signal_wifi_enabled">Enable WLAN icon settings</string>
    <string name="statusbar_signal_wifi_style">Status bar WLAN icon selection</string>
    <string name="system_animation">system animation</string>
    <string name="task_keys">task key</string>
    <string name="text_size_title">size is  </string>
    <string name="thickness_title">thickness is  </string>
    <string name="transition_animation">over animation</string>
    <string name="vibrator">Enable vibration feedback</string>
    <string name="vibrator_feedback">Vibration feedback</string>
    <string name="vibratorlevel">set the vibration feedback level</string>
    <string name="vibratorlevel_title"> level</string>
    <string name="wake_unplugged">USB plug and wake up screen</string>
    <string name="width_title">width is  </string>
    <string name="window_animation">window animation</string>
</resources>