<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/keyguard_statusbar_name" />
    <SwitchPreference android:title="@string/keyguard_Biometrics" android:key="wake_Biometrics" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <SwitchPreference android:title="@string/keyguard_statusbar" android:key="keyguard_statusbar" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <Preference android:key="dynamiclock" />
    <com.leo.salt.preference.SaltSettingCardPreference />
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/google_name" />
    <Preference android:key="apps" />
    <Preference android:title="@string/google_name_remove" android:key="leo_google_remove" android:summary="@string/google_name_remove_summary" />
    <SwitchPreference android:title="@string/freeze_goole_service" android:key="leo_freeze_google_service" android:defaultValue="true" />
    <Preference android:title="@string/instal_kernel" android:key="leo_instal_kernel" />
    <SwitchPreference android:title="@string/airplane_tactics" android:key="leo_airplane" android:summary="@string/airplane_tactics_summary" android:defaultValue="false" />
    <SwitchPreference android:title="@string/sim_dialog" android:key="leo_stk" android:summary="@string/sim_dialog_summary" android:defaultValue="false" />
    <Preference android:title="@string/battery_log" android:key="leo_battery_log" android:summary="@string/battery_log_summary" android:defaultValue="false" />
    <SwitchPreference android:title="@string/wake_unplugged" android:key="wake_unplugged" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <SwitchPreference android:title="@string/sim_restriction" android:key="SimSdBlock" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingCardPreference />
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/system_animation" />
    <com.leo.salt.preference.SaltSettingAnimationPreference android:entries="@array/window_animation_scale_entries" android:title="@string/window_animation" android:key="window_animation_scale" android:defaultValue="1" android:entryValues="@array/window_animation_scale_values" />
    <com.leo.salt.preference.SaltSettingAnimationPreference android:entries="@array/window_animation_scale_entries" android:title="@string/transition_animation" android:key="transition_animation_scale" android:defaultValue="1" android:entryValues="@array/window_animation_scale_values" />
    <com.leo.salt.preference.SaltSettingAnimationPreference android:entries="@array/window_animation_scale_entries" android:title="@string/animator_duration" android:key="animator_duration_scale" android:defaultValue="1" android:entryValues="@array/window_animation_scale_values" />
</PreferenceScreen>