<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:salt="http://schemas.android.com/apk/res-auto">
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/statusbar_bg" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_bg_enabled" android:key="statusbarbgenabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingDefaultListPreference android:entries="@array/bg_style_entries" android:title="@string/bgv_mode" android:key="statusbar_bg_style" android:dependency="statusbarbgenabled" android:defaultValue="0" android:entryValues="@array/bg_style_values" />
    <com.leo.salt.preference.SaltSettingCardPreference />
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/bgv_single_color_gategory" android:key="stabar_only_bg_color">
        <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/bgv_single_color" android:key="statusbar_bg_color" android:dependency="statusbarbgenabled" android:defaultValue="0x00000000" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
    </com.leo.salt.preference.SaltSettingCategoryPreference>
    <com.leo.salt.preference.SaltSettingCardPreference />
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/bgv_gradient_color_gategory" android:key="stabar_gradient_color">
        <com.leo.salt.preference.SaltSettingDefaultListPreference android:entries="@array/bg_three_gradient_model_type_entries" android:title="@string/bgv_gradient_color_style" android:key="statusbar_gradient_type" android:dependency="statusbarbgenabled" android:defaultValue="0" android:entryValues="@array/bg_three_gradient_model_type_values" />
        <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="1600" android:title="@string/bgv_gradient_color_radius" android:key="stabarColorRadius" android:defaultValue="480" android:min="480" salt:interval="1" salt:unitsRight=" R" />
        <com.leo.salt.preference.SaltSettingDefaultListPreference android:entries="@array/bg_gradient_type_entries" android:title="@string/bgv_gradient_color_mode" android:key="status_bar_gradient_style" android:dependency="statusbarbgenabled" android:defaultValue="0" android:entryValues="@array/bg_gradient_type_values" />
        <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/bgv_gradient_color_a" android:key="statusbar_bg_one_color" android:dependency="statusbarbgenabled" android:defaultValue="0x99252525" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
        <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/bgv_gradient_color_b" android:key="statusbar_bg_two_color" android:dependency="statusbarbgenabled" android:defaultValue="0x99252525" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
        <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/bgv_gradient_color_c" android:key="statusbar_bg_thee_color" android:dependency="statusbarbgenabled" android:defaultValue="0x99252525" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
        <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/bgv_gradient_color_start_f" android:key="statusbar_bg_six_enabled" android:dependency="statusbarbgenabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
        <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/bgv_gradient_color_d" android:key="statusbar_bg_four_color" android:dependency="statusbar_bg_six_enabled" android:defaultValue="0x99252525" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
        <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/bgv_gradient_color_e" android:key="statusbar_bg_five_color" android:dependency="statusbar_bg_six_enabled" android:defaultValue="0x99252525" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
        <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/bgv_gradient_color_f" android:key="statusbar_bg_six_color" android:dependency="statusbar_bg_six_enabled" android:defaultValue="0x99252525" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
        <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="65" android:title="@string/dashed_radius_title" android:key="stabardashedradius" android:dependency="statusbarbgenabled" android:defaultValue="20" android:min="1" salt:interval="1" salt:unitsLeft="@string/radius_title" salt:unitsRight=" R" />
    </com.leo.salt.preference.SaltSettingCategoryPreference>
    <com.leo.salt.preference.SaltSettingCardPreference />
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/bgv_dashed" android:key="stabar_dashed">
        <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/dashed_title" android:key="statusbar_bg_dashed_enabled" android:dependency="statusbarbgenabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
        <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/dashed_color_title" android:key="statusbar_bg_dashed_color" android:dependency="statusbar_bg_dashed_enabled" android:defaultValue="0x6033B5E5" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
        <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="30" android:title="@string/dashed_thickness_title" android:key="leo_salt_statusbar_bg_dashed_thickness" android:dependency="statusbar_bg_dashed_enabled" android:defaultValue="15" android:min="1" salt:interval="1" salt:unitsLeft="@string/thickness_title" salt:unitsRight=" dp" />
        <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="30" android:title="@string/dashed_width_title" android:key="leo_salt_statusbar_bg_dashed_width" android:dependency="statusbar_bg_dashed_enabled" android:defaultValue="15" android:min="1" salt:interval="1" salt:unitsLeft="@string/width_title" salt:unitsRight=" dp" />
        <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="30" android:title="@string/dashed_gop_title" android:key="leo_salt_statusbar_bg_dashed_gap" android:dependency="statusbar_bg_dashed_enabled" android:defaultValue="15" android:min="1" salt:interval="1" salt:unitsLeft="@string/gop_title" salt:unitsRight=" dp" />
        <com.leo.salt.preference.SaltSettingCardPreference />
    </com.leo.salt.preference.SaltSettingCategoryPreference>
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/bgv_wallpaper" android:key="stabar_wallpaper">
        <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/bgv_color_start" android:key="statusbar_bg_wallpaper_color_enabled" android:dependency="statusbarbgenabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
        <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/bgv_color" android:key="statusbar_bg_wallpaper_color" android:dependency="statusbar_bg_wallpaper_color_enabled" android:defaultValue="0xFFFFFFFF" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
        <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/bgv_alpha_start" android:key="statusbar_bg_wallpaper_alpha_enabled" android:dependency="statusbarbgenabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
        <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="255" android:title="@string/bgv_alpha" android:key="leo_salt_statusbar_bg_wallpaper_alpha" android:dependency="statusbar_bg_wallpaper_alpha_enabled" android:defaultValue="155" android:min="0" salt:interval="1" salt:unitsLeft="@string/alpha_res" salt:unitsRight=" Alpha" />
        <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/bgv_blur_start" android:key="statusbar_bg_wallpaper_blur_enabled" android:dependency="statusbarbgenabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
        <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="25" android:title="@string/bgv_blur" android:key="leo_salt_statusbar_bg_wallpaper_blur_style" android:dependency="statusbar_bg_wallpaper_blur_enabled" android:defaultValue="15" android:min="5" salt:interval="1" salt:unitsLeft="@string/blur_res" salt:unitsRight=" R" />
    </com.leo.salt.preference.SaltSettingCategoryPreference>
</PreferenceScreen>