<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:salt="http://schemas.android.com/apk/res-auto">
    <Preference android:key="bar" />
    <com.leo.salt.preference.SaltSettingChooseSwitchPreference android:title="@string/statusbar_battery" android:key="statusbar_battery_style" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" salt:clickValues="4" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="120" android:title="@string/statusbar_battery_icon_size" android:key="size" android:defaultValue="60" android:min="40" salt:interval="1" salt:unitsLeft="@string/text_size_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="5" android:title="@string/statusbar_battery_start_padding" android:key="start_padding" android:summary="@string/seekbar_padding_sumarry" android:defaultValue="1" android:min="1" salt:interval="1" salt:unitsLeft="@string/padding_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="5" android:title="@string/statusbar_battery_end_padding" android:key="end_padding" android:summary="@string/seekbar_padding_sumarry" android:defaultValue="1" android:min="1" salt:interval="1" salt:unitsLeft="@string/padding_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="30" android:title="@string/statusbar_battery_low" android:key="low" android:defaultValue="15" android:min="5" salt:interval="1" salt:unitsLeft="" salt:unitsRight=" " />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_battery_color_enabled" android:key="@string/statusbar_battery_color_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/statusbar_battery_color" android:key="statusbar_battery_color" android:defaultValue="0xC3FFFFFF" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/statusbar_battery_low_color" android:key="statusbar_battery_low_color" android:defaultValue="0x99000000" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_battery_dark_color_enabled" android:key="statusbar_battery_dark_color_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/statusbar_battery_dark_color" android:key="statusbar_battery_dark_color" android:defaultValue="0x99000000" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/statusbar_battery_low_dark_color" android:key="statusbar_battery_low_dark_color" android:defaultValue="0x99000000" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
</PreferenceScreen>