<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:salt="http://schemas.android.com/apk/res-auto">
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="18" android:title="@string/qs_shelf_all_size" android:key="leo_salt_qs_shelf_all_size" android:defaultValue="13" android:min="5" salt:interval="1" salt:unitsLeft="@string/text_size_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingChooseSwitchPreference android:title="@string/qs_shelf_notie" android:key="qs_shelf_notie" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" salt:clickValues="1" />
    <com.leo.salt.preference.SaltSettingChooseSwitchPreference android:title="@string/qs_shelf_clear" android:key="qs_shelf_clear" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" salt:clickValues="1" />
    <com.leo.salt.preference.SaltSettingFontPreference android:entries="@array/font_style_entries" android:title="@string/qs_shelf_notie_font" android:key="qs_shelf_notie_font" android:defaultValue="0" android:entryValues="@array/font_style_values" />
    <com.leo.salt.preference.SaltSettingFontPreference android:entries="@array/font_style_entries" android:title="@string/qs_shelf_clear_font" android:key="qs_shelf_clear_font" android:defaultValue="0" android:entryValues="@array/font_style_values" />
</PreferenceScreen>